syntax = "proto3";
package proto;

option go_package = "github.com/vsheoran/trends/grpc/client;client";

// The ticker service definition.
service Ticker {
  rpc UpdateStock(StockRequest) returns (StockResponse) {}
  rpc GetSummary (stream SummaryRequest) returns (stream SummaryResponse) {}
}

// The request message containing the stock info
message StockRequest {
  string symbol = 1;
  double close = 2;
  double high = 3;
  double low = 4;
  string date = 5;
}

// The request message containing the stock info
message StockResponse {}


// The request message containing the user's name.
message SummaryRequest {
  string sas = 1;
}

message SummaryResponse {
  oneof message{
    // RateResponse returns the exchange rate when updated
    SummaryReply reply = 1;
    // status returns rich error messages to the client
    string error = 2;
  }
}

// The response message containing the greetings
message SummaryReply {
  double close = 1;
  double high = 2;
  double low = 3;
  double average = 4;
  double minLP3 = 5;
  double ema5 = 6;
  double ema20 = 7;
  double rsi = 8;
  double hl3 = 9;
  double trend = 10;
  double buy = 11;
  double support = 12;
  double bullish = 13;
  double barish = 14;
  double previousBuy = 15;
}